# builtin

./: .gitignore  Makefile  pyproject.toml
src/everai_autoscaler/builtin/decorator/: __init__.py  average.py  noop.py
tests/: test_average_decorator.py  test_builtin_manager.py  test_factory.py  test_free_workers.py  test_is_builtin.py  test_simple.py  test_time_match.py  test_timezone.py  test_utils.py
