[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [
  "src",
  "."
]

[project]
name = "everai-builtin-autoscaler"
version = "0.1.26"
#dynamic = ["version"]
description = "everai built in auto scaler"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["expvent", "ever", "everai", "ai", "inference", "serveless", "autoscaling", "autoscaler", "builtin"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3.10",
]
authors = [
  {name = "mc", email = "mc@expvent.com"}
]
maintainers = [
  {name = "mc", email = "mc@expvent.com"}
]
requires-python = ">= 3.10"
dependencies = [
  "everai-autoscaler~=0.1.13",
]


[project.optional-dependencies]
dev = [
  "pytest~=8.0.2",
  "pytest-cov~=4.1.0",

]
build = [
  "build~=1.2.1",
  "wheel~=0.41.2",
  "twine~=5.0.0",
]

[project.scripts]
everai-autoscaler-builtin = "everai_autoscaler.builtin.cli.commands.main:main"

[project.urls]
Homepage = "https://everai.expvent.com"
Documentation = "https://everai.expvent.com"
Repository = "https://github.com/everai-autoscaler/builtin"
Issues = "https://github.com/everai-autoscaler/builtin/issues"
Changelog = "https://github.com/everai-autoscaler/builtin/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src/"]
include = ["everai_autoscaler.builtin", "everai_autoscaler.builtin/*"]

#[tool.setuptools.dynamic]
#version = {attr = "everai_autoscaler.builtin.version.__version__"}
